2003-12-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/pipeline.cxx:
  - Compiles
2003-12-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/except.hxx:
  - Empty throw specification for sql_error::query() 
 include/pqxx/largeobject.hxx, src/largeobject.cxx:
  - Empty throw specification for largeobjectaccess::close()
 include/pqxx/pipeline, include/pqxx/pipeline.hxx, src/pipeline.cxx:
  - New
 include/pqxx/result.hxx, include/pqxx/transaction_base.hxx:
  - Prototyped facilities for pipeline
2003-12-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh:
  - No longer runs autoheader, which would overwrite config.h.in
 configure.ac, include/pqxx/config.h.in, include/pqxx/libconfig.h.in:
  - Renamed some more HAVE_... macros to PQXX_HAVE
  - Removed some unnecessary macros
  - Workaround for missing clear() in standard string
 src/connection_base.cxx:
  - Fixed broken tablewriter for pre-7.4 postgres--thanks Roger Leigh!
2003-12-24  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx:
  - Made async argument to WriteCopyLine() default to false
 src/transaction_base.cxx:
  - Fixed some double spaces in error strings
2003-12-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 debian/*:
  - Applied Debian patches by Roger Leigh
 include/pqxx/result.hxx:
  - More general implementation of operator<<(), thanks Hubert-Jan Schaminee!
2003-11-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh:
  - Removed obsolete ABI versioning
 configure.ac.in:
  - Now sets PQXXVERSION
 src/Makefile.am:
  - Implemented "-release" ABI versioning.  Thanks Roger Leigh!
 tools/preprelease:
  - Fixed nm invocation used to generate library symbols
 win32/libpqxx.mak:
  - Fixed some wrapped lines.  Thanks Paresh Patel!
  - Fixed some carriage return/line feed problems (Paresh Patel)
2003-11-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, src/connection_base.cxx:
  - Removed "OnReconnect" parameter from Exec()